Added encryption/decryption for the messages sent by users and corrected some bugs