@@ -1,12 +1,13 @@
 package model;
 
 import java.security.*;
-import java.security.spec.InvalidKeySpecException;
 
 import javax.crypto.*;
+import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.*;
+import org.apache.commons.codec.binary.Base64;
+
 
 public class Aes {
     public Aes() {
@@ -15,10 +16,10 @@ public class Aes {
 
     private static final String ALGO = "AES";
     private static final byte[] keyValueInfos = new byte[] {
-        'd', 'g', 'e', 'q', 'e', '|', 't', 'm', 'e', 'c', ']', 'e', 't', '.', 'e', 'y'
+        'd', 'g', 'e', 'q', 'e', '|', 't', 'm', 'e', '*', ']', 'e', 't', '.', 'e', 'y'
     };
     private static final byte[] keyValueMessage = new byte[] {
-        'd', 'g', 'e', 'q', 'e', '|', 't', 'm', 'e', 'c', ']', 'e', 't', '.', 'e', 'y'
+        'a', '2', 'f', 'q', '.', '|', 'p', '/', 'w', 'c', ']', '^', '6', '.', 'e', '?'
     };
 
     public String encrypt(String Data,int type) throws Exception {
@@ -27,10 +28,10 @@ public class Aes {
             key = generateKeyInfos();
         else 
             key = generateKeyMessage();
-        Cipher c = Cipher.getInstance("AES");
-        c.init(Cipher.ENCRYPT_MODE, key);
+        Cipher c = Cipher.getInstance("AES/CBC/PKCS5Padding");
+        c.init(Cipher.ENCRYPT_MODE, key,new IvParameterSpec(new byte[16]));
         byte[] encVal = c.doFinal(Data.getBytes());
-        String encryptedValue = new BASE64Encoder().encode(encVal);
+        String encryptedValue = Base64.encodeBase64String(encVal);
         return encryptedValue;
     }
 
@@ -40,9 +41,9 @@ public class Aes {
             key = generateKeyInfos();
         else
             key = generateKeyMessage();
-        Cipher c = Cipher.getInstance("AES");
-        c.init(Cipher.DECRYPT_MODE, key);
-        byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+        Cipher c = Cipher.getInstance("AES/CBC/PKCS5Padding");
+        c.init(Cipher.DECRYPT_MODE, key,new IvParameterSpec(new byte[16]));
+        byte[] decordedValue = Base64.decodeBase64(encryptedData);
         byte[] decValue = c.doFinal(decordedValue);
         String decryptedValue = new String(decValue);
         return decryptedValue;
@@ -54,7 +55,7 @@ public class Aes {
     }
     
     private Key generateKeyMessage() throws Exception {
-        Key key = new SecretKeySpec(keyValueInfos, ALGO);
+        Key key = new SecretKeySpec(keyValueMessage, ALGO);
         return key;
     }
 }
